# postgresql-in-action

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml  justfile  schema.sql  sqlc.yaml
queries/: get_movie_with_limit.sql
src/: config.rs  error.rs  main.rs  state.rs  utils.rs
