[package]
name = "postgresql-in-action"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
chrono = "0.4.39"
config = "0.15.6"
dotenvy = "0.15.7"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = "1.0.217"
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono"]

[dev-dependencies]
once_cell = "1.20.2"
reqwest = "0.12.12"
